# lupine-rhizo

./: .gitignore  AGENTS.md  ATLAS_Lean_Integration_Review.md  CONTRIBUTING.md  GLOSSARY.md  LICENSE-CONTENT.md  LICENSE-DATA.md  LUPINE.md  NOTICE.md  README.md  ROOTS.md  benchmark_causal_audit.json  brand.config.json  justfile  lit-review.md  nist_benchmark.csv  pyproject.toml  pytest.ini
atlas-distill/: .dockerignore  Cargo.toml  Dockerfile  README.md  cloudbuild.yaml
atlas-distill/benchmarks/: README.md  autoresearch_results.json  bcc_elastic_constants.csv  fcc_elastic_constants.csv  kim_elastic_results.csv  kim_elastic_results_all.csv  kim_elastic_results_tier2.csv  nist_populated.csv  nist_populated_all.csv  nist_populated_tier2.csv  nist_scaffold.csv  paradox_input_all.csv  paradox_input_c11.csv  paradox_input_pairstyle.csv
atlas-distill/examples/: arrhenius_summary.csv  nucleation_barrier.csv  shear_thinning.csv
atlas-distill/lammps_runs/Ag_Ackland-1987/: Ag.eam.fs  in.elastic  in.statics  log.lammps.elastic  log.lammps.statics  result.json
atlas-distill/lammps_runs/Ag_Adams-1989/: in.elastic  in.statics  log.lammps.elastic  log.lammps.statics  result.json
atlas-distill/lammps_runs/Ag_Foiles-1986/: in.elastic  in.statics  log.lammps.elastic  log.lammps.statics  result.json
atlas-distill/lammps_runs/Ag_Williams-2006/: in.elastic  in.statics  log.lammps.elastic  log.lammps.statics  result.json
atlas-distill/lammps_runs/Ag_Zhou-2004/: in.elastic  in.statics  log.lammps.elastic  log.lammps.statics  result.json
atlas-distill/lammps_runs/Al_Botu-2015/: in.statics  log.lammps.statics
atlas-distill/lammps_runs/Al_Botu-2017/: in.statics  log.lammps.statics
atlas-distill/lammps_runs/Al_Choudhary-2015/: in.statics  log.lammps.statics
atlas-distill/lammps_runs/Al_Li-2026/: Al.tersoff.modc  in.statics  log.lammps.statics
atlas-distill/lammps_runs/Al_Liu-2004/: in.elastic  in.statics  log.lammps.elastic  log.lammps.statics  result.json
atlas-distill/lammps_runs/Al_Mendelev-2008/: in.elastic  in.statics  log.lammps.elastic  log.lammps.statics  result.json
atlas-distill/lammps_runs/Al_Mendelev-2010/: Fictional-Al1-1.eam.fs  Fictional-Al1-2.eam.fs  Fictional-Al1-3.eam.fs  in.elastic  in.statics  log.lammps.elastic  log.lammps.statics  result.json
atlas-distill/lammps_runs/Al_Mishin-1999/: in.elastic  in.statics  log.lammps.elastic  log.lammps.statics  result.json
atlas-distill/lammps_runs/Al_Purja-2020/: in.statics  log.lammps.statics
atlas-distill/lammps_runs/Al_Sturgeon-2000/: MDSL.eam.fs  in.elastic  in.statics  log.lammps.elastic  log.lammps.statics  result.json
atlas-distill/lammps_runs/Al_Winey-2009/: in.elastic  in.statics  log.lammps.elastic  log.lammps.statics  result.json
atlas-distill/lammps_runs/Al_Zhakhovskii-2009/: in.statics  log.lammps.statics
atlas-distill/lammps_runs/Al_Zhou-2004/: in.elastic  in.statics  log.lammps.elastic  log.lammps.statics  result.json
atlas-distill/lammps_runs/Al_Zope-2003/: in.elastic  in.statics  log.lammps.elastic  log.lammps.statics  result.json
atlas-distill/lammps_runs/Au_Ackland-1987/: Au.eam.fs  in.elastic  in.statics  log.lammps.elastic  log.lammps.statics  result.json
atlas-distill/lammps_runs/Au_Adams-1989/: in.elastic  in.statics  log.lammps.elastic  log.lammps.statics  result.json
atlas-distill/lammps_runs/Au_Foiles-1986/: in.elastic  in.statics  log.lammps.elastic  log.lammps.statics  result.json
atlas-distill/lammps_runs/Au_Grochola-2005/: in.elastic  in.statics  log.lammps.elastic  log.lammps.statics  result.json
atlas-distill/lammps_runs/Au_Norman-2012/: in.elastic  in.statics  log.lammps.elastic  log.lammps.statics  result.json
atlas-distill/lammps_runs/Au_Olsson-2010/: in.elastic  in.statics  log.lammps.elastic  log.lammps.statics  result.json
atlas-distill/lammps_runs/Au_Purja-2017/: in.elastic  in.statics  log.lammps.elastic  log.lammps.statics  result.json
atlas-distill/lammps_runs/Au_Zhakhovskii-2009/: in.statics  log.lammps.statics
atlas-distill/lammps_runs/Au_Zhou-2004/: in.elastic  in.statics  log.lammps.elastic  log.lammps.statics  result.json
atlas-distill/scripts/: al_manifold_analysis.py  plot_year_stratified.py  publish.ps1  simulate_5d_observables.py
atlas-distill/src/: autoresearch.rs  benchmark.rs  causal.rs  formalize.rs  main.rs  manifold.rs  meta_analysis.rs  nist.rs  pipeline.rs  report.rs  runner.rs  stats.rs  surrogate.rs  validation.rs
cocoindex/: .gitignore  README.md  export_evidence.py  main.py  pyproject.toml  query.py  seed_data.py  test_pipeline.py
gcp/mlip-cell-runner/: DECOMMISSION.md  Dockerfile  Dockerfile.unified  README.md  backend_catalog.json  build_canonical_v2_mptrj.py  build_mptrj_distill_support.py  cloudbuild-m3gnet.yaml  cloudbuild-orb-m3gnet.yaml  cloudbuild.single.yaml  cloudbuild.unified.yaml  cloudbuild.yaml  mlip_cell_runner.py  pyproject.toml  requirements-chgnet.txt  requirements-common.txt  requirements-m3gnet.txt  requirements-mace.txt  requirements-orb.txt  requirements-sevennet.txt  requirements-uma.txt  test_distill_runtime.py  test_fixture_contract.py  test_local_validation.py  test_openinference_patcher.py  test_runner_backends.py  test_runner_batch.py  test_runner_checkpoint.py  test_runner_observability.py  test_runner_offline.py
gcp/tasks-consumer/: Cargo.toml  Dockerfile  cloudbuild.yaml
lupine-ops/: Cargo.toml  README.md
lupine-ops/src/: elastic.rs  ledger.rs  lib.rs  manifest.rs  mlip_ops.rs  nist_resolver.rs  statics.rs
python/: README.md  pyproject.toml  pytest.ini
python/lupine_distill/: __init__.py  benchmark.py  constants.py  fixture_contract.py  lammps_ingest.py  runner.py  schemas.py  suite.py  uplift_cli.py
python/lupine_distill_runtime/: README.md  __init__.py  events.py  instrumented.py  leakage.py  policy.py  policy_engine.py  session.py
python/scripts/: run_cross_material_transfer.py  run_ni_gpu_loop.py
python/tests/: conftest.py  test_backends.py  test_cli.py  test_lammps_ingest.py  test_regime.py  test_schemas.py  test_suite.py  test_uplift.py
(+1091 files in other folders)
