[project]
name = "glim-evidence-index"
version = "0.1.0"
description = "CocoIndex pipeline: incremental evidence index (coordination traces, hypotheses, claims) for glim-think."
requires-python = ">=3.11"
dependencies = [
    "cocoindex>=1.0.0",
    "sentence-transformers>=2.0.0",
    "sqlite-vec>=0.1.6",
    "numpy>=1.26",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# The cocoindex CLI loads `main.py` by path, so there's no package to build —
# this stub just lets `pip install -e .` resolve runtime deps.
only-include = ["main.py"]
