[package]
name = "lupine-ops"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"

# Binary deps. Gated behind feature flags so the core library stays
# lightweight for downstream crates that only need ledger/manifest types.
anyhow = { version = "1.0", optional = true }
clap = { version = "4.5", features = ["derive"], optional = true }
gcp_auth = { version = "0.12", optional = true }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false, optional = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "signal", "fs", "io-util", "time"], optional = true }
time = { version = "0.3", features = ["formatting", "macros", "parsing"], optional = true }
chrono = { version = "0.4", default-features = false, features = ["clock"], optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = ["monitor", "kimi-supervisor"]
monitor = ["anyhow", "clap", "gcp_auth", "reqwest", "tokio", "time"]
kimi-supervisor = ["anyhow", "clap", "gcp_auth", "reqwest", "tokio", "chrono"]

[[bin]]
name = "monitor_cloud_run"
path = "src/bin/monitor_cloud_run.rs"
required-features = ["monitor"]

[[bin]]
name = "kimi_supervisor"
path = "src/bin/kimi_supervisor.rs"
required-features = ["kimi-supervisor"]
