[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lupine-distill"
version = "0.1.0"
description = "Python benchmark, uplift, regime, and ODF contracts for Lupine Distill"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "numpy>=1.26",
    "ase>=3.28",
    "requests>=2.32",
]

[project.optional-dependencies]
# TorchSim batched-GPU backend used by scripts/run_ni_gpu_loop.py and
# lupine_distill/backends/torchsim.py. Installs the torch-sim-atomistic
# distribution (import name torch_sim) plus the MACE foundation model stack.
torchsim = [
    "torch-sim-atomistic>=0.2.0",
    "mace-torch>=0.3.16",
]

# Per-MLIP backend extras. These mirror the BACKEND build args used by
# gcp/mlip-cell-runner/Dockerfile.unified so one image can install exactly
# the stack it needs.
mace = ["mace-torch>=0.3.16"]
chgnet = ["chgnet>=0.4.2"]
sevennet = ["sevenn>=0.12.1"]
orb = ["orb-models>=0.5.5"]
matgl = ["matgl>=2.0.6", "dgl>=2.4.0", "torchdata>=0.8.0"]
# m3gnet is the historical backend id for the MatGL/DGL stack.
m3gnet = ["matgl>=2.0.6", "dgl>=2.4.0", "torchdata>=0.8.0"]
uma = ["fairchem-core>=2.14.0"]

# Opt-in telemetry dependencies for the Distill flywheel.
telemetry = [
    "opentelemetry-api>=1.24",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-exporter-otlp-proto-http>=1.24",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["lupine_distill*", "lupine_distill_runtime*"]
